<resources>
    <string name="app_name">MainActicity</string>
    <string name="title_activity_upload">MainActivity</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">上传</string>
    <string name="title_notifications">消息</string>
    <string name="title_mine">我的</string>
    <string name="mine">我的</string>
    <string name="fan">粉丝</string>
    <string name="gz">关注</string>
    <string name="like">喜欢</string>
    <string name="topictip">话题互动</string>
</resources>