<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background">

        <ImageView
            android:id="@+id/MyBackPic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.65"
            android:background="@mipmap/back" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutmine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <com.example.mainacticity.My_ImageViewPlus
            android:id="@+id/head2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/head"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp" />

        <ImageButton
            android:id="@+id/personalbtn"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/arrow"
            android:background="@android:color/transparent"
            android:layout_marginBottom="70dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="15dp"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/head2"
            android:layout_alignTop="@id/head2"
            android:layout_marginLeft="20dp"
            android:text="这里是用户名"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_toEndOf="@id/head2"
            android:layout_marginStart="20dp" />
        <TextView
            android:id="@+id/userId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_alignLeft="@+id/username"
            android:textColor="@color/white"
            android:text="ID:000000"
            android:layout_alignStart="@+id/username" />
        <TextView
            android:id="@+id/fan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fan"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="45dp"
            android:layout_below="@+id/userId"
            android:layout_alignLeft="@id/userId"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="45dp"
            android:layout_alignStart="@id/userId" />
        <TextView
            android:id="@+id/gz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gz"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="60dp"
            android:layout_below="@+id/userId"
            android:layout_toRightOf="@id/fan"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="60dp"
            android:layout_toEndOf="@id/fan" />
        <TextView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="60dp"
            android:layout_below="@+id/userId"
            android:layout_toRightOf="@id/gz"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="60dp"
            android:layout_toEndOf="@id/gz" />

        <TextView
            android:id="@+id/fanNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/fan"
            android:layout_toLeftOf="@id/fan"
            android:layout_marginRight="-35dp"
            android:text="100"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_toStartOf="@id/fan"
            android:layout_marginEnd="-35dp" />

        <TextView
            android:id="@+id/gzNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/gz"
            android:layout_toLeftOf="@id/gz"
            android:layout_marginRight="-55dp"
            android:text="110"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_toStartOf="@id/gz"
            android:layout_marginEnd="-55dp" />
        <TextView
            android:id="@+id/likeNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/like"
            android:layout_toLeftOf="@id/like"
            android:layout_marginRight="-55dp"
            android:text="125"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_toStartOf="@id/like"
            android:layout_marginEnd="-55dp" />

    </RelativeLayout>

    <!--内容布局-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutmine"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/roundcorner"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Icons"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/topicEntry1"
                app:layout_constraintLeft_toLeftOf="@id/topicEntry1"
                app:layout_constraintRight_toRightOf="@id/topicEntry1"
                android:gravity="center"
                android:text="@string/topictip"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                />

            <ImageView
                android:id="@+id/topicEntry1"
                android:layout_width="70dp"
                android:layout_height="80dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingTop="10dp"
                android:paddingHorizontal="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:src="@mipmap/topic_icon"
                android:paddingBottom="30dp"
                android:layout_marginStart="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/topicEntry2"
                app:layout_constraintLeft_toLeftOf="@id/topicEntry2"
                app:layout_constraintRight_toRightOf="@id/topicEntry2"
                android:gravity="center"
                android:text="作者入驻"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                />

            <ImageView
                android:id="@+id/topicEntry2"
                android:layout_width="70dp"
                android:layout_height="80dp"
                app:layout_constraintLeft_toRightOf="@id/topicEntry1"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingTop="10dp"
                android:paddingHorizontal="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:src="@mipmap/icon2"
                android:paddingBottom="30dp"
                android:layout_marginStart="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/topicEntry3"
                app:layout_constraintLeft_toLeftOf="@id/topicEntry3"
                app:layout_constraintRight_toRightOf="@id/topicEntry3"
                android:gravity="center"
                android:text="消息中心"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                />

            <ImageView
                android:id="@+id/topicEntry3"
                android:layout_width="70dp"
                android:layout_height="80dp"
                app:layout_constraintLeft_toRightOf="@id/topicEntry2"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingTop="10dp"
                android:paddingHorizontal="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:src="@mipmap/icon3"
                android:paddingBottom="30dp"
                android:layout_marginStart="50dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/Icons"
            app:layout_constraintBottom_toBottomOf="parent">
            
            <ImageView
                android:id="@+id/item1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:src="@mipmap/item1"
                android:scaleType="centerCrop"/>
            <ImageView
                android:id="@+id/item2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/item1"
                android:src="@mipmap/item2"
                android:scaleType="centerCrop"/>
            <ImageView
                android:id="@+id/item3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/item2"
                android:src="@mipmap/item3"
                android:scaleType="centerCrop"/>
            <ImageView
                android:id="@+id/item4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/item3"
                android:src="@mipmap/item4"
                android:scaleType="centerCrop"/>
            <ImageView
                android:id="@+id/item5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/item4"
                android:src="@mipmap/item5"
                android:scaleType="centerCrop"/>



            
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>